src/objects/ReportConfig__mdt.object
<CustomObject>
    <description>This is the support object for the report described in PPN-21988</description>
    <fields>
        <fullName>CaseStatusValues__c</fullName>
        <description>Case status values which are to be pulled for the report are to be added here, i.e New;In Progress; etc.....make sure there are no spaces between the values in the values separated by the semi colons.</description>
        <label>Case Status Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <description>This is the subject line of the email</description>
        <label>Subject of Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Failures_Report_Recipents__c</fullName>
        <label>Failures_Report_Recipents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>This is the name of the file as it will appear to whomever receives the report</description>
        <label>File Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderListing__c</fullName>
        <description>Column header list for CSV report</description>
        <label>Header Listing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MainQuery2__c</fullName>
        <label>MainQuery2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MainQuery__c</fullName>
        <description>This is the main query for generating the report</description>
        <label>Main Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecipientEmailList__c</fullName>
        <description>This is semi-colon separated list of email addresses to whom the report will be sent.</description>
        <label>Recipient Email List</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Types__c</fullName>
        <description>This is the value of the Case Record Type you want to use to build your report</description>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_types2__c</fullName>
        <label>Record Types2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>body__c</fullName>
        <description>This is the body of the email message to whomever receives the report..</description>
        <label>body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ReportConfig</label>
    <pluralLabel>ReportConfigs</pluralLabel>
</CustomObject>